@@ -144,6 +144,10 @@ class TestUploadFunctional:
         devpi("upload", "--formats", "sdist.tbz")
         devpi("upload", "--formats", "sdist.tgz,bdist_dumb")
 
+        # logoff then upload
+        devpi("logoff")
+        devpi("upload", "--dryrun", code=404)
+
         # go to other index
         devpi("use", "root/pypi")
         devpi("upload", "--dryrun", code=404)
